final commit add logout feature enhance post method remove /status/:id page

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,21 @@
 extends layout
 
 block content
-  a(href="/post") new post
+	div(class='topnav')
+		a(class="active" href="./") Home
+		a(href="/signup") Signup
+		a(href="./logout") Logout
 
-  ul
-    each post in posts
-      li=post
+
+	
+	p(class="titlehead") Your Posts
+
+	div(class="list-type2")
+	ul
+		each post in posts
+			li=post.post
+
+	button(onclick="window.location='/post'" class='buttonsignup') New Post
+
+
+	
