--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,5 +1,6 @@
 doctype html
 html
+	meta(name="viewport" content="width=device-width, inital-scale=1")
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
@@ -63,6 +64,22 @@ html
 
 			}
 
+			h1::first-letter
+			{	
+				text-transform: capitalize;
+				color: #ffffff;
+
+
+			}
+
+			h1
+			{
+			font-size: 200%;
+			color:#ffffff;
+			}
+
+			
+
 			input[type=text], select {
 			
 			    width: 100%;
@@ -89,7 +106,51 @@ html
 			    background-color: #45a049;
 			}
 
+			.topnav {
+			  overflow: hidden;
+			  background-color: #212121;
+			  width: 100%;
+			  margin-top: -60px;
+			  margin-left: -60px;
+			}
 
+			.topnav a {
+			  float: left;
+			  color: #f2f2f2;
+			  text-align: center;
+			  padding: 14px 16px;
+			  text-decoration: none;
+			  font-size: 17px;
+			}
+
+			.topnav a:hover {
+			  background-color: #ddd;
+			  color: black;
+			}
+
+			.topnav a.active {
+			  background-color: #4CAF50;
+			  color: white;
+			}
+
+			ul{
+			list-style-type: none;
+
+			background: #4CAF50;
+			padding: 20px;
+			}
+
+			ul li{
+			background: #cce5ff;
+			margin: 5px;
+
+
+			}
+
+			
 
 	body
+    
+
+
 		block content
